protocols/tests/identities/identity_d1/explicit_fork.out
error: The two expressions did not evaluate to the same value
   ┌─ identities/identity_d1/identity_d1.prot:12:13
   │
12 │   assert_eq(s, DUT.s);
   │             ^^^^^^^^ LHS Value: 4, RHS Value: 3

Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr3, expr2_id: expr4, value1: ValueOwned(00000000000000000000000000000100), value2: ValueOwned(00000000000000000000000000000011) })
Trace 0 execution failed.
